--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="main-section">
+        <div class="wrapper">
+            <div class="button-section">
+                <button class="btn pre-btn">
+                    <img src="images/previous-btn.png" alt="">
+                    <span>Previous</span>
+                </button>
+
+                <button class="btn pause-btn">
+                    <img src="images/pause.png" alt="">
+                    <span>Pause</span>
+                </button>
+
+                <button class="btn play-btn">
+                    <img src="images/play-btn.png" alt="">
+                    <span>Play</span>
+                </button>
+
+                <button class="btn next-btn">
+                    <img src="images/next-btn.png" alt="">
+                    <span>Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
     
     
 </body>
